# STF

./: Cargo.toml  README.html  README.md  README.stf  rustfmt.toml
src/: frontend.rs  html.rs  main.rs  stf.rs  util.rs
src/frontend/: html.rs  txt.rs
