[package]
name = "stf"
version = "1.0.0"
edition = "2024"
description = "Style Tag Format parser and front-end generator"

[dependencies]
unicode-segmentation = "1.13.2"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
